<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"

        android:background="#FF9800"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/mo"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/teal_700"
        android:src="@drawable/momo"
        tools:ignore="ExtraText"
        android:contentDescription="@string/like"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#009688"
            android:gravity="center|clip_vertical"
            android:text="@string/like"

            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#009688"
            android:gravity="center|clip_vertical"

            android:text="@string/comment"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#009688"
            android:gravity="center|clip_vertical"
            android:text="@string/share"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@color/teal_200"
        android:gravity="center"
        android:orientation="horizontal">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:ems="10"
        android:inputType="text"
        android:text="@string/amount"
        android:textSize="20sp"
        android:hint="@string/amount"
        android:autofillHints="creditCardNumber"
        />


    <Button
        android:id="@+id/button55"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:shadowColor="#7C1F8C"
        android:text="@string/search" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="#FF9800"
        android:ems="10"
        android:inputType="text"
        android:text="@string/result"
        android:textSize="20sp"
        android:autofillHints="creditCardNumber"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="#FF9800"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/with"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

 />

</LinearLayout>
